syntax = "proto3";

package proto.ext.wlrclip;

message Offer {
  bytes data = 1;
  string mime_type = 2;
};

message Selection {
  repeated Offer offers = 1;
};
